--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
   "name": "supersquad",
   "version": "0.1.0",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --watch false",
+    "eject": "react-scripts eject",
+    "lint": "react-scripts tslint",
+    "format": "prettier --write README.md src/**/*.{ts,html,scss,css}"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "prepush": "npm test --watch=false"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,scss,,css,html}": [
+      "pretty-quick --staged"
+    ],
+    "*.ts": [
+      "tslint",
+      "git add"
+    ]
+  },
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.8",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "^16.9.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.2",
-    "redux": "^4.0.4",
-    "typescript": "^3.6.3"
+    "redux": "^4.0.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "husky": "^3.0.7",
+    "lint-staged": "^9.4.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.3"
   },
   "eslintConfig": {
     "extends": "react-app"
