--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watch false",
     "eject": "react-scripts eject",
-    "lint": "react-scripts tslint-react",
+    "lint": "tslint-config-prettier-check ./tslint.json",
     "format": "prettier --write README.md src/**/*.{ts,html,scss,css}"
   },
   "husky": {
@@ -16,11 +16,11 @@
     }
   },
   "lint-staged": {
-    "*.{ts,scss,,css,html}": [
+    "*.{ts,css,html}": [
       "pretty-quick --staged"
     ],
     "*.ts": [
-      "tslint-react",
+      "lint",
       "git add"
     ]
   },
@@ -41,8 +41,10 @@
     "lint-staged": "^9.4.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
+    "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^4.1.0",
     "typescript": "^3.6.3"
   },
