--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "lint-staged": {
     "*.{ts,css,html}": [
-      "pretty-quick --staged"
+      "lint --staged"
     ],
     "*.ts": [
       "lint",
