verifying lint and stage configurations

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "lint-staged": {
     "*.{ts,css,html}": [
-      "lint --staged"
+      "npm run lint"
     ],
     "*.ts": [
-      "lint",
+      "npm run lint",
       "git add"
     ]
   },
