--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watch false",
+    "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "tslint -c tslint.json src/**/*.{ts,tsx} --format verbose",
     "format": "prettier --write README.md src/**/*.{ts,html,scss,css}"
@@ -12,7 +12,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
-      "prepush": "react-scripts test --watch=false"
+      "pre-push": "npm run test"
     }
   },
   "lint-staged": {
@@ -37,6 +37,7 @@
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "cross-env": "^6.0.0",
     "husky": "^3.0.7",
     "lint-staged": "^9.4.0",
     "prettier": "^1.18.2",
